public interface Component {
    void brandName();
}
